apps/base/2048-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2048
  labels:
    app: app-2048
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-2048
  template:
    metadata:
      labels:
        app: app-2048
    spec:
      containers:
      - image: docker.io/evilroot/docker-2048:latest
        args:
        - pwd
        - cd /usr/share/nginx/html
        name: app-2048
        ports:
        - containerPort: 80
