apps/base/2048-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-2048-service
  namespace: app-2048
spec:
  selector:
    name: app-2048
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
