apps/base/2048-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    certmanager.k8s.io/cluster-issuer: selfsigned-cluster-issuer
    external-dns.alpha.kubernetes.io/hostname: 2048.anhtran.be
  name: app-2048
  namespace: app-2048
spec:
  ingressClassName: nginx
  rules:
  - host: 2048.anhtran.be
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-2048-service
            port:
              number: 80
